# ChangeLog for gnome-extra/yelp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.320 2015/03/15 13:27:22 pacho Exp $

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> yelp-3.14.1.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> yelp-3.14.1.ebuild:
  amd64 stable, bug 534012

*yelp-3.14.1 (22 Dec 2014)

  22 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> +yelp-3.14.1.ebuild:
  Version bump for Gnome 3.14.

  13 Nov 2014; Pacho Ramos <pacho@gentoo.org>
  -files/yelp-2.30.2-freeze-move.patch, -files/yelp-2.30.2-gthread.patch,
  -files/yelp-2.30.2-print-crash.patch, -files/yelp-2.30.2-uri-handler.patch,
  -files/yelp-2.30.2-xz-support.patch, -yelp-2.30.2-r200.ebuild,
  -yelp-3.10.2.ebuild:
  Drop old (#508854)

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-3.12.0.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-3.12.0.ebuild:
  Stable for amd64, wrt bug #512912

*yelp-3.12.0 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +yelp-3.12.0.ebuild:
  Version bump for Gnome 3.12.

  27 Apr 2014; Pacho Ramos <pacho@gentoo.org> -yelp-3.10.1.ebuild,
  -yelp-3.8.1.ebuild:
  drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> yelp-3.10.2.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> yelp-3.10.2.ebuild:
  amd64 stable, bug 499954

*yelp-3.10.2 (08 Mar 2014)

  08 Mar 2014; Pacho Ramos <pacho@gentoo.org> +yelp-3.10.2.ebuild:
  Version bump

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> yelp-3.10.1.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> yelp-3.10.1.ebuild:
  arch stable, bug 888

  05 Jan 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
  yelp-2.30.2-r200.ebuild, +files/yelp-2.30.2-gthread.patch:
  Fix underlinking failure (bug #497106, thanks to d_dart).

*yelp-3.10.1 (24 Dec 2013)
