@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST gnome-photos-3.12.1.tar.xz 704588 SHA256 077cc6c2ae28680457fba435a22184e25f3a60a6fbe1901a75e42f6f6136538f SHA512 1412334417fde08708f9fbbee7f8a285d86c024ef1b7aaadafd15ee2b9358ec3a4fca7c0b7e32cad9b8c61319eea5163a16b336b7336c542d0e35609b165b247 WHIRLPOOL 61e46ab6c1f3001e6b9d0e760afccad4d38aee0b537f295de84440d3d458317221c58d39a5cb681c3b822e5b301b9aeda3a669f6abab6e674d27e665ee001cbd
 DIST gnome-photos-3.14.2.tar.xz 756784 SHA256 1bce84bd0467647decf26f81e03535940ab65a7774f44e1395a2b87d88c0be96 SHA512 6c55844f40197f1e3d8f0779bac1fdf0ba5e32bd639a8878adb109444c816ffcdc8acf3d6023d8c75ce298d61e4b6f9fa76ef81a2ec1592fb6e0633ef1e6cc23 WHIRLPOOL bf4e2157fd544f2aa0e74dc9742cf58977c7fa89fb23dda9f037d60a2fa2124f64e6f350bee0bc1e1a094075110f84d5ec9827bb5a4a5e1599b272502b1ee2ea
-EBUILD gnome-photos-3.12.1.ebuild 1058 SHA256 399c5576d5efff6d71f097de0bf192bcaf6d39013f533b7aa01a417e322e9583 SHA512 cb076cb5fedb7c9f8a82fe8fda5d98d636ecc60cd6fb3ac1b15617b15ae52de0224bbdea7ac8e0334f88cf5bf828bc912d7deca2609261a9e0824534ba95ebd9 WHIRLPOOL ffa90f589e1dea4ef916fe2b5d6219bdb13a264748dfd202cccda36ffb226a2b1aacb3b3923f3384faef2b684e67a835bf012bf5f471489e071f897dcc53a1d5
+DIST gnome-photos-3.14.3.tar.xz 759244 SHA256 7cce615869f98ec038fb308ee6cec725e72a2c2cf67aaf44d4d01e2303d878b0 SHA512 595322d9f01c886c4184ce9c95c17f4c745e7faf148c4c1d051e76606c1067f4a27a20b34629d445ce1d7938d85813097b8a2e479e48563be9176210361f397b WHIRLPOOL 105ab02c84aaef8c5f80ffd5c5d42187da3d04ee83f43c8fdc15a8053679f44920755a8ced630933ab7032e85c987f48e3305363259e5076addd51274da04c05
 EBUILD gnome-photos-3.14.2.ebuild 1128 SHA256 d336a9b7cb5e58021074bce761b3dbf5489001f53906cd7e922a5ace69cbed2d SHA512 6704a3ea056f0ad5e5920b3bc5c268b532a4f689b1e5d483ac9790a56525d716b748e03f951844b6ada52085eecfde51b8a25823d88c2c9ff82442a04650e67e WHIRLPOOL 87313cd744bd755b91b413c5e1845c7aac67f10d3fb3e1a54365786b3f167c3b8df2745ac27dc18e0fe9522b6939e251761c3963950112ea2138342927317b5a
-MISC ChangeLog 2197 SHA256 9aa8ae52d7a629100e51f5aad86c2398f21763b91ae6a2dba0fa2001c367733f SHA512 6d3f839983e8d6b8a08f32281b65640abc078d141fb8e08478ddcd0242260bcf069f6428bbdb41f72aadbe03308727d1cf43d5042bbb95f27b3fa6599bc10a12 WHIRLPOOL 573b06ade57271c329aa42d5ea75d33c73c74dfb8602b9210fadcc9c86a4361c7a98441fbf9d3fe7447afd537e4232d281b9646c4477f72dd2a166be5358e30b
+EBUILD gnome-photos-3.14.3.ebuild 1081 SHA256 6417641d30e0571a0d266504d8969ff55124b9f225926a1ad748e9bd45d17ac0 SHA512 6aa95265f24d76d622ef5448008b8ab036ba3ccd90f765e8c4bffab0039ccf940961530f73502f5c9f02d1af11de125b7e3ef07300fed8e3fd29f13f8b254e25 WHIRLPOOL a44a2c57ecc6a6a93de8e6bdd515ed9b85333f50c577646426fdd3b593be734c91d9ef55f487a81d1af84dd55d5735276a3d065a4176a2946a5b05f3a60ec76f
+MISC ChangeLog 2365 SHA256 85b7c123be16f559c1f22f21f952ca4feed96c998aaa0121b86b0505d92f0df8 SHA512 4ce8e3a69269381e00cb9885c052401478e8cd66847e8429576bd6507790e9cba8e09c92da86fbc8e71b07e9ddc5854e0a06b2a2acdf88f88c7aad2aa4ffb230 WHIRLPOOL 753a9e2f59d0f354018b1bd8eb5f0d5188988be875367ec4bcdcebf60d072cb9763c1e78fb6b8bb35b1225022475b6c1f7141d5542e38cb8802a358e4f6e6f02
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUFiNUACgkQCaWpQKGI+9TT9gCfef4i9CoeOJwE/6hs9UQmeksv
-QjQAn23CUC9FPEeXNz9qgwRwHiWmIl/e
-=OOMo
+iEYEAREIAAYFAlVbjOMACgkQCaWpQKGI+9QH6gCdHNoZE8qtpoI52pvR3e++6zre
+IcAAn13XSLO3W0VwoxbJKnGzBTmruK5Y
+=gjmy
 -----END PGP SIGNATURE-----
