@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
-DEPEND=app-arch/bzip2:= >=app-arch/xz-utils-4.9:= dev-db/sqlite:3= >=dev-libs/glib-2.25.11:2 >=dev-libs/libxml2-2.6.5:2 >=dev-libs/libxslt-1.1.4 >=gnome-extra/yelp-xsl-3.6.1 >=net-libs/webkit-gtk-1.3.10:3 >=x11-libs/gtk+-3.8:3 x11-themes/gnome-icon-theme-symbolic >=dev-util/gtk-doc-am-1.13 >=dev-util/intltool-0.41.0 >=sys-devel/gettext-0.17 virtual/pkgconfig gnome-base/gnome-common !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 app-arch/xz-utils >=sys-apps/sed-4
-DESCRIPTION=Help browser for GNOME
-EAPI=5
-HOMEPAGE=https://wiki.gnome.org/Apps/Yelp
-IUSE=debug
-KEYWORDS=~alpha amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc x86 ~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris
-LICENSE=GPL-2+
-RDEPEND=app-arch/bzip2:= >=app-arch/xz-utils-4.9:= dev-db/sqlite:3= >=dev-libs/glib-2.25.11:2 >=dev-libs/libxml2-2.6.5:2 >=dev-libs/libxslt-1.1.4 >=gnome-extra/yelp-xsl-3.6.1 >=net-libs/webkit-gtk-1.3.10:3 >=x11-libs/gtk+-3.8:3 x11-themes/gnome-icon-theme-symbolic
-SLOT=0
-SRC_URI=mirror://gnome/sources/yelp/3.12/yelp-3.12.0.tar.xz
-_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	10c513def52488230abb60a4b19a03b9	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=ff121d722b768c3d6c1c287c2ce6ec8b
