@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/yelp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.320 2015/03/15 13:27:22 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.321 2015/05/19 19:26:09 pacho Exp $
+
+*yelp-3.14.2 (19 May 2015)
+
+  19 May 2015; Pacho Ramos <pacho@gentoo.org> +yelp-3.14.2.ebuild,
+  -yelp-3.12.0.ebuild:
+  Version bump, drop old
 
   15 Mar 2015; Pacho Ramos <pacho@gentoo.org> yelp-3.14.1.ebuild:
   x86 stable, bug 534012
